--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -30,39 +30,440 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<a id='gathering'></a>\n",
+    "## Data Gathering\n",
+    "\n",
+    "Data gathering process will result in three (3) following files:\n",
+    "* **twitter_archive_enhanced.csv**: this file has been provided by Udacity and can be manually downloaded from 'resources' section fo the project part of the course.  \n",
+    "\n",
+    "* **image_predictions.tsv**: this file is hosted on Udacity's servers and is downloaded programmatically using the Requests library and [this](https://d17h27t6h515a5.cloudfront.net/topher/2017/August/599fd2ad_image-predictions/image-predictions.tsv) URL.  \n",
+    "\n",
+    "* **tweet-json.txt**: this file can be accessed by querying the Twitter API for each tweet's JSON data using Python's Tweepy library and store each tweet's entire set of JSON data. As we are encounting some technical challenges to set up as developer account on Tweetet, we are going to use the version provided by the instructor which can be manually downloaded from the course's project page."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### Importing needed libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import requests\n",
+    "import json\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Reading archive data into a dataframe"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tweet_id</th>\n",
+       "      <th>in_reply_to_status_id</th>\n",
+       "      <th>in_reply_to_user_id</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>source</th>\n",
+       "      <th>text</th>\n",
+       "      <th>retweeted_status_id</th>\n",
+       "      <th>retweeted_status_user_id</th>\n",
+       "      <th>retweeted_status_timestamp</th>\n",
+       "      <th>expanded_urls</th>\n",
+       "      <th>rating_numerator</th>\n",
+       "      <th>rating_denominator</th>\n",
+       "      <th>name</th>\n",
+       "      <th>doggo</th>\n",
+       "      <th>floofer</th>\n",
+       "      <th>pupper</th>\n",
+       "      <th>puppo</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>892420643555336193</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2017-08-01 16:23:56 +0000</td>\n",
+       "      <td>&lt;a href=\"http://twitter.com/download/iphone\" r...</td>\n",
+       "      <td>This is Phineas. He's a mystical boy. Only eve...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://twitter.com/dog_rates/status/892420643...</td>\n",
+       "      <td>13</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Phineas</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>892177421306343426</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2017-08-01 00:17:27 +0000</td>\n",
+       "      <td>&lt;a href=\"http://twitter.com/download/iphone\" r...</td>\n",
+       "      <td>This is Tilly. She's just checking pup on you....</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://twitter.com/dog_rates/status/892177421...</td>\n",
+       "      <td>13</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Tilly</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>891815181378084864</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2017-07-31 00:18:03 +0000</td>\n",
+       "      <td>&lt;a href=\"http://twitter.com/download/iphone\" r...</td>\n",
+       "      <td>This is Archie. He is a rare Norwegian Pouncin...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://twitter.com/dog_rates/status/891815181...</td>\n",
+       "      <td>12</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Archie</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             tweet_id  in_reply_to_status_id  in_reply_to_user_id  \\\n",
+       "0  892420643555336193                    NaN                  NaN   \n",
+       "1  892177421306343426                    NaN                  NaN   \n",
+       "2  891815181378084864                    NaN                  NaN   \n",
+       "\n",
+       "                   timestamp  \\\n",
+       "0  2017-08-01 16:23:56 +0000   \n",
+       "1  2017-08-01 00:17:27 +0000   \n",
+       "2  2017-07-31 00:18:03 +0000   \n",
+       "\n",
+       "                                              source  \\\n",
+       "0  <a href=\"http://twitter.com/download/iphone\" r...   \n",
+       "1  <a href=\"http://twitter.com/download/iphone\" r...   \n",
+       "2  <a href=\"http://twitter.com/download/iphone\" r...   \n",
+       "\n",
+       "                                                text  retweeted_status_id  \\\n",
+       "0  This is Phineas. He's a mystical boy. Only eve...                  NaN   \n",
+       "1  This is Tilly. She's just checking pup on you....                  NaN   \n",
+       "2  This is Archie. He is a rare Norwegian Pouncin...                  NaN   \n",
+       "\n",
+       "   retweeted_status_user_id retweeted_status_timestamp  \\\n",
+       "0                       NaN                        NaN   \n",
+       "1                       NaN                        NaN   \n",
+       "2                       NaN                        NaN   \n",
+       "\n",
+       "                                       expanded_urls  rating_numerator  \\\n",
+       "0  https://twitter.com/dog_rates/status/892420643...                13   \n",
+       "1  https://twitter.com/dog_rates/status/892177421...                13   \n",
+       "2  https://twitter.com/dog_rates/status/891815181...                12   \n",
+       "\n",
+       "   rating_denominator     name doggo floofer pupper puppo  \n",
+       "0                  10  Phineas  None    None   None  None  \n",
+       "1                  10    Tilly  None    None   None  None  \n",
+       "2                  10   Archie  None    None   None  None  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### Reading the 'twitter-archive-enhanced.csv' file into a dataframe\n",
+    "tweet_archive = pd.read_csv('twitter-archive-enhanced.csv')\n",
+    "tweet_archive.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Downloading image predictions data and loading it into a datframe"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tweet_id</th>\n",
+       "      <th>jpg_url</th>\n",
+       "      <th>img_num</th>\n",
+       "      <th>p1</th>\n",
+       "      <th>p1_conf</th>\n",
+       "      <th>p1_dog</th>\n",
+       "      <th>p2</th>\n",
+       "      <th>p2_conf</th>\n",
+       "      <th>p2_dog</th>\n",
+       "      <th>p3</th>\n",
+       "      <th>p3_conf</th>\n",
+       "      <th>p3_dog</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>666020888022790149</td>\n",
+       "      <td>https://pbs.twimg.com/media/CT4udn0WwAA0aMy.jpg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Welsh_springer_spaniel</td>\n",
+       "      <td>0.465074</td>\n",
+       "      <td>True</td>\n",
+       "      <td>collie</td>\n",
+       "      <td>0.156665</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Shetland_sheepdog</td>\n",
+       "      <td>0.061428</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>666029285002620928</td>\n",
+       "      <td>https://pbs.twimg.com/media/CT42GRgUYAA5iDo.jpg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>redbone</td>\n",
+       "      <td>0.506826</td>\n",
+       "      <td>True</td>\n",
+       "      <td>miniature_pinscher</td>\n",
+       "      <td>0.074192</td>\n",
+       "      <td>True</td>\n",
+       "      <td>Rhodesian_ridgeback</td>\n",
+       "      <td>0.072010</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>666033412701032449</td>\n",
+       "      <td>https://pbs.twimg.com/media/CT4521TWwAEvMyu.jpg</td>\n",
+       "      <td>1</td>\n",
+       "      <td>German_shepherd</td>\n",
+       "      <td>0.596461</td>\n",
+       "      <td>True</td>\n",
+       "      <td>malinois</td>\n",
+       "      <td>0.138584</td>\n",
+       "      <td>True</td>\n",
+       "      <td>bloodhound</td>\n",
+       "      <td>0.116197</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             tweet_id                                          jpg_url  \\\n",
+       "0  666020888022790149  https://pbs.twimg.com/media/CT4udn0WwAA0aMy.jpg   \n",
+       "1  666029285002620928  https://pbs.twimg.com/media/CT42GRgUYAA5iDo.jpg   \n",
+       "2  666033412701032449  https://pbs.twimg.com/media/CT4521TWwAEvMyu.jpg   \n",
+       "\n",
+       "   img_num                      p1   p1_conf  p1_dog                  p2  \\\n",
+       "0        1  Welsh_springer_spaniel  0.465074    True              collie   \n",
+       "1        1                 redbone  0.506826    True  miniature_pinscher   \n",
+       "2        1         German_shepherd  0.596461    True            malinois   \n",
+       "\n",
+       "    p2_conf  p2_dog                   p3   p3_conf  p3_dog  \n",
+       "0  0.156665    True    Shetland_sheepdog  0.061428    True  \n",
+       "1  0.074192    True  Rhodesian_ridgeback  0.072010    True  \n",
+       "2  0.138584    True           bloodhound  0.116197    True  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### Downloading 'image-predictions.tsv' file programatically \n",
+    "url = \"https://d17h27t6h515a5.cloudfront.net/topher/2017/August/599fd2ad_image-predictions/image-predictions.tsv\"\n",
+    "resp = requests.get(url)\n",
+    "with open('image-predictions.tsv', mode ='wb') as file:\n",
+    "    file.write(resp.content)\n",
+    "\n",
+    "### Reading the file into dataframe\n",
+    "img_predictions = pd.read_csv('image-predictions.tsv', sep='\\t' )\n",
+    "img_predictions.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Reading Json data into a dataframe"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tweet_id</th>\n",
+       "      <th>retweet_count</th>\n",
+       "      <th>favorite_count</th>\n",
+       "      <th>full_text</th>\n",
+       "      <th>display_text_range</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>892420643555336193</td>\n",
+       "      <td>8853</td>\n",
+       "      <td>39467</td>\n",
+       "      <td>This is Phineas. He's a mystical boy. Only eve...</td>\n",
+       "      <td>[0, 85]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>892177421306343426</td>\n",
+       "      <td>6514</td>\n",
+       "      <td>33819</td>\n",
+       "      <td>This is Tilly. She's just checking pup on you....</td>\n",
+       "      <td>[0, 138]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>891815181378084864</td>\n",
+       "      <td>4328</td>\n",
+       "      <td>25461</td>\n",
+       "      <td>This is Archie. He is a rare Norwegian Pouncin...</td>\n",
+       "      <td>[0, 121]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             tweet_id  retweet_count  favorite_count  \\\n",
+       "0  892420643555336193           8853           39467   \n",
+       "1  892177421306343426           6514           33819   \n",
+       "2  891815181378084864           4328           25461   \n",
+       "\n",
+       "                                           full_text display_text_range  \n",
+       "0  This is Phineas. He's a mystical boy. Only eve...            [0, 85]  \n",
+       "1  This is Tilly. She's just checking pup on you....           [0, 138]  \n",
+       "2  This is Archie. He is a rare Norwegian Pouncin...           [0, 121]  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### Extracting data of interest from 'tweet-json.txt' file\n",
+    "\n",
+    "list_dict_interest_data = []\n",
+    "\n",
+    "### Loading json data\n",
+    "with open('tweet-json.txt') as json_data:\n",
+    "    for line in json_data:\n",
+    "        data = json.loads(line)\n",
+    "        \n",
+    "### Adding needed data to the list        \n",
+    "        list_dict_interest_data.append({'tweet_id': data['id_str'],\n",
+    "                        'retweet_count': data['retweet_count'],\n",
+    "                        'favorite_count': data['favorite_count'],\n",
+    "                        'full_text': data['full_text'],\n",
+    "                        'display_text_range': data['display_text_range']\n",
+    "                       })\n",
+    "\n",
+    "        \n",
+    "tweets_data = pd.DataFrame(list_dict_interest_data, columns = ['tweet_id', 'retweet_count', 'favorite_count', \n",
+    "                                                               'full_text','display_text_range'])\n",
+    "tweets_data.head(3)"
+   ]
   },
   {
    "cell_type": "code",
