Storing dataframe in .csv file and in database

--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -6286,32 +6286,72 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Storing clean dataframe to csv file"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### Save tweet_archive_clean dataframe to a CSV file\n",
+    "tweet_archive_clean.to_csv('twitter_archive_master.csv', index=False)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2174, 24)"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### Reading data from the newly saved csv file\n",
+    "twitter_master = pd.read_csv('twitter_archive_master.csv')\n",
+    "twitter_master.shape"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2174, 24)"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### Save tweet_archive_clean dataframe to a database\n",
+    "from sqlalchemy import create_engine\n",
+    "try:\n",
+    "    engine = create_engine('sqlite:///twitter_db.db')\n",
+    "    tweet_archive_clean.to_sql('twitter_master', engine, index=False)   \n",
+    "except:\n",
+    "    pass\n",
+    "### Reading data from the newly created database\n",
+    "twitter_master = pd.read_sql('SELECT * FROM twitter_master', engine)\n",
+    "twitter_master.shape"
+   ]
   },
   {
    "cell_type": "code",
